--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/redco/goose-proxy-rotator#readme",
   "dependencies": {
     "debug": "^2.2.0",
-    "jfile": "^1.1.12"
+    "jfile": "^1.1.12",
+    "lodash": "^4.17.15"
   }
 }
